--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@material-ui/icons": "^3.0.1",
     "@tensorflow/tfjs": "^0.13.4",
     "firebase": "^5.5.6",
+    "google-maps-react": "^2.0.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-google-maps": "^9.4.5",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
     "react-redux-firebase": "^2.1.9",
